<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_sell"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/nav_sell" />
    <item
        android:id="@+id/nav_chats"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_chats" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
